# local-llm-developer

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: models.yaml  settings.yaml  workflow.yaml
docs/: AGENTS.md  ANTI_LAZY.md  ARCHITECTURE.md  EXECUTION.md  MEMORY.md  ORCHESTRATOR.md  PROMPTING.md  REVIEW_LOOPS.md  ROADMAP.md  TESTING.md  UI.md  WORKFLOWS.md
src/lld/: __init__.py  api.py  app.py  cli.py  config.py  git_integration.py  logging_setup.py  persistence.py
src/lld/agents/: __init__.py  architect.py  base.py  file_writing.py  parsing.py  planner.py  registry.py  review_agents.py
src/lld/memory/: __init__.py  project_memory.py
src/lld/orchestrator/: __init__.py  engine.py
src/lld/prompts/: __init__.py
src/lld/prompts/common/: anti_lazy_charter.md  self_review.md
src/lld/prompts/roles/: architect.md  documentation.md  final_auditor.md  implementation.md  planner.md  refactor.md  review.md  security.md  test.md
src/lld/ui/: __init__.py
src/lld/ui/static/: app.css  app.js
src/lld/ui/templates/: index.html
src/lld/verification/: __init__.py  anti_lazy.py  runners.py
tests/: conftest.py  test_anti_lazy.py  test_config.py  test_engine_smoke.py  test_memory.py  test_parsing.py
